All exercises done

--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,3 +1,17 @@
+
+div.text {
+  color: green;
+  font-size: 22px;
+}
+div.child {
+  color: red;
+  font-size: 14px;
+}
+
+.para {
+  font-size: 22px;
+}
+
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
@@ -6,10 +20,12 @@
 .small-para {
   font-size: 14px;
 }
-
-.para {
-  font-size: 22px;
+.button {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  font-size: 20px;
 }
+
 
 .confirm {
   background: green;
@@ -17,18 +33,3 @@
   font-weight: bold;
 } 
 
-.button {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
-  font-size: 20px;
-}
-
-.child {
-  color: red;
-  font-size: 14px;
-}
-
-div.text {
-  color: green;
-  font-size: 22px;
-}
