--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -24,4 +24,52 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header,
+.footer {
+  margin: 0;
+  padding: 0;
+}
+.header,
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header ul,
+.footer ul {
+  text-decoration: none;
+  list-style: none;
+}
+
+ul {
+  margin: 0;
+  padding: 15px;
+  display: flex;
+  gap: 10px;
+}
+
+.content {
+  text-align: center;
+}
+
+.footer {
+  background-color: #eee;
+}
+
+.grid {
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  height: 100vh;
+}
+
+a {
+  color: #666;
+  text-decoration: none;
+}
+
+button {
+  padding: 8px 16px;
 }
